[package]
name = "kitty-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"
teloxide = { version = "0.12", features = ["macros", "rustls"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = "0.11.18"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
